--- a/builds/install/arch-specific/linux/classic/postinstall.sh.in
+++ b/builds/install/arch-specific/linux/classic/postinstall.sh.in
@@ -31,7 +31,7 @@
 #   Contributor(s):
 #  
 # 
-#   $Id: postinstall.sh.in,v 1.13 2005-08-16 10:04:11 alexpeshkoff Exp $
+#   $Id: postinstall.sh.in,v 1.13.4.1 2006-04-16 11:51:55 alexpeshkoff Exp $
 # 
 
 # The post install script for Firebird Classic
@@ -87,7 +87,7 @@
 
 
     # Update ownership and SUID bits for programs.
-    chown -R $RunUser.$RunUser $FBRootDir
+    chown -R $RunUser:$RunUser $FBRootDir
 
     fixFilePermissions
 
