Let's do not require firebird.conf in utilities. In the long term (starting with HEAD?), the project "common" must die.

--- a/builds/win32/msvc7/gstat.vcproj
+++ b/builds/win32/msvc7/gstat.vcproj
@@ -206,6 +206,16 @@
 				RelativePath="..\..\..\src\jrd\ods.cpp">
 			</File>
 		</Filter>
+		<Filter
+			Name="COMMON files"
+			Filter="">
+			<File
+				RelativePath="..\..\..\src\common\config\config.cpp">
+			</File>
+			<File
+				RelativePath="..\..\..\src\common\config\config_file.cpp">
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 	</Globals>
